--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,20 @@ handlers:
   static_files: static/index.html
   upload: static/index.html
 
+- url: /styles
+  static_dir: static/styles
+
+- url: /images
+  static_dir: static/images
+
+- url: /favicon.ico
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
+
+- url: /robots.txt
+  static_files: static/robots.txt
+  upload: static/robots.txt
+
 - url: /faq
   script: _go_app
 
