--- a/batterybot-site.service
+++ b/batterybot-site.service
@@ -3,7 +3,10 @@ Description=BatteryBot Website
 After=syslog.target network.target
 
 [Service]
-ExecStart=/usr/bin/sudo -i -u darshan /home/darshan/bin/run-batterybot-site
+Type=forking
+PIDFile=/home/darshan/batterybot.info/run/pid
+ExecStart=/usr/bin/sudo -i -u darshan /home/darshan/bin/restart-batterybot-site
+ExecStop=/usr/bin/sudo -i -u darshan /home/darshan/bin/stop-batterybot-site
 
 [Install]
 WantedBy=multi-user.target
